friend typeahead no longer covered by modal, updated some can edit stuff.
If you can't edit an event, it now does not show the text boxes, rather
it just shows text. Also the typeahead for friends names displays
properly.

--- a/mysite/static/css/custom.css
+++ b/mysite/static/css/custom.css
@@ -297,3 +297,7 @@ td.otherMonth {
 #eventModal .modal-body {
         max-height: 350px;
 }
+
+#friendModal .modal-body {
+    overflow: visible;
+}
